src/app/home/home.component.scss
.presentation{
  font-size: 187.5%;
  font-weight: bold;
}

.mainBox{
  margin: 180px 150px 0px 150px;
}

.descMySelf {
  font-size: 175%;
  font-weight: 700;
}

.projects{
  margin-top: 6rem;
}

#personalIcon, .knowlegde{
  margin-top: 2rem;
}


.projectTitle {
  font-size: 162.5%;
  font-weight: 600;
}

.descProject {
  font-size: 112%;
  line-height: 25px;
}

.linkProject {
  font-size: 125%;
  margin-top: 1.0em;
  margin-left: 1.0em;
}

.knowlegdeTxt, .aboutResume {
  font-weight: 600;
  font-size: 125%;
}

.knowlegdeTxt {
  width: 50%;
}

.aboutResume {
  font-size: 150%;
  margin-left: 4rem;
}

.contactBox {
  margin-left: 4rem;
}

.msgContact {
  font-size: 160%;
  margin: 8px 0px
}

.submsgContact {
  font-size: 140%;
  margin: 8px 0px
}

svg {
  height: auto;
}

.btn{
  transition:1s;
}

.slide{
  background: linear-gradient(to left, #111 50%, #2e8a7c 50%);
  background-size: 200% 100%;
  background-position:right bottom;
}

.slide:hover,
.slide:focus {
  background-position:left bottom;
}

.knowlegdeBox{
  display: flex;
  flex-direction: row;
  margin-left: 4rem;
  margin-top: 1.25rem;
}

.knowlegdeIllustration{
  width: 50%;
}

.presentationSonBox {
  width: 60%;
}

#personalIcon {
  width: 40%;
}

.marginOdd{
  margin-left: 6rem;
  margin-right: 4rem;
}

.marginPair{
  margin-right: 6rem;
  margin-left: 4rem;
}

#arrowKnowMore {
  padding-left: 0px;
  transition: 1s;
}

#boxKownMore:hover > #arrowKnowMore {
  padding-left: 40px;
}

.logoSection {
  display: flex;
  justify-content: center;
  width: 100%;
}

#personalIconSvg {
  transition: 1s;
}

.polygons {
  transition: 0.8s;
}

.copyri{
  display: flex;
  justify-content: center;
  font-family: monospace;
  font-size: 10px;
}

.contactEmail {
  color: #db2696;
}

.contactFormBox {
  width: 100%;
  max-width: 600px;
  margin-top: 10px;
  margin-left: 20px;
}

.btnSendEmail {
  border: 2px solid #FFF;
  border-radius: 3px;
  width: 50%;
  padding: 5px;
  min-width: 100px;
  max-width: 150px;
  font-size: 18px;
  display: flex;
  margin: auto;
  justify-content: center;
}

.labelForm {
  color: #FFF;
  font-weight: 500;
  font-size: 17px;
}
.mat-focused .labelForm {
  color: #db2696;
}

.textareaContact {
  resize: none;
  height: 100px;
}

::ng-deep .mat-form-field-underline {
  background-color: #38CA13 !important;
}

::ng-deep .mat-form-field-ripple {
  background-color: #db2696 !important;
}

@media only screen
and (max-width : 1085px) {
  .mainBox{
    margin: 180px 60px 0px 130px;
  }
}

@media only screen
and (max-width : 1000px) {
  .knowlegdeBox{
    flex-direction: column-reverse;
    margin-top: 0rem;
  }

  .knowlegdeTxt, .knowlegdeIllustration {
    width: 100%;
  }

  #personalIcon {
    width: 45%;
  }

  .msgContact {
    font-size: 140%;
  }
  
  .submsgContact {
    font-size: 110%;
  }
}

@media only screen
and (max-width : 950px) {
  .presentationSonBox {
    width: 90%;
  }

  .marginOdd{
    margin-left: 4rem;
    margin-right: 2rem;
  }

  .marginPair{
    margin-right: 4rem;
    margin-left: 2rem;
  }

  .knowlegdeBox, .aboutResume, .contactBox{
    margin-left: 2rem;
  }

  #personalIcon {
    width: 50%;
  }
}

@media only screen
and (max-width : 850px) {
  .mainBox{
    margin: 120px 40px 0px 40px;
  }

  .msgContact {
    font-size: 150%;
  }
  
  .submsgContact {
    font-size: 120%;
  }

  .contactFormBox {
    margin-left: 0px;
  }
}

@media only screen
and (max-width : 700px) {
  .marginOdd{
    margin-left: 2rem;
    margin-right: 0rem;
  }

  .marginPair{
    margin-right: 2rem;
    margin-left: 0rem;
  }

  .knowlegdeBox, .aboutResume, .contactBox{
    margin-left: 1rem;
  }

  .presentation{
    font-size: 150%;
  }

  .descMySelf {
    font-size: 140%;
  }

  .projectTitle {
    font-size: 145%;
  }

  .aboutResume {
    font-size: 130%;
  }

  #personalIcon {
    width: 55%;
  }
}

@media only screen
and (max-width : 550px) {
  .marginOdd{
    margin-left: 0rem;
  }

  .marginPair{
    margin-right: 0rem;
  }

  .aboutResume, .knowlegdeBox, .contactBox {
    margin-left: 0.5rem;
  }

  .presentation{
    font-size: 140%;
  }

  .descMySelf {
    font-size: 130%;
  }

  .projectTitle {
    font-size: 135%;
  }

  .aboutResume {
    font-size: 120%;
  }

  .projects{
    margin-top: 3rem;
  }

  #personalIcon, .knowlegde {
    margin-top: 1rem;
  }

  #personalIcon {
    width: 65%;
  }

  .msgContact {
    font-size: 120%;
  }
  
  .submsgContact {
    font-size: 100%;
  }
}

